fix: Calendar close icon overlaping issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -417,6 +417,7 @@ input {
   position: relative;
   bottom: 2px;
   left: 2px;
+  padding-right: 10px;
 }
 
 /* Customradio button */
